# demo-dramatiq

./: .env  .gitignore  pyproject.toml
src/api/: db.py  server.py  settings.py  worker.py
src/domain/: simulation.py
