[tool.poetry]
name = "demo-dramatiq"
version = "0.1.0"
description = ""
authors = ["MaxHoefl <hoefl.max@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
dramatiq = { version = "^1.13.0", extras = ["redis", "watch"] }
pydantic = { version = "^1.10.2", extras = ["dotenv"] }
sqlmodel = "^0.0.8"
loguru = "^0.6.0"
uvicorn = { version = "^0.18.3", extras = ["standard"] }
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
